welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:5: error: '(' expected but identifier found.
     if estSurBiscuits() {
        ^Poucet:8: error: illegal start of simple expression
   } while (!crossing())
   ^